--- a/MySecretServices/MySecretServices.csproj
+++ b/MySecretServices/MySecretServices.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="Models\PrintProduct.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Settings.cs" />
     <Compile Include="MyController.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -129,6 +130,7 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
+    <Compile Include="Responses\BaseResponse.cs" />
     <Compile Include="Service.cs">
       <SubType>Component</SubType>
     </Compile>
