--- a/MySecretServices/MySecretServices.csproj
+++ b/MySecretServices/MySecretServices.csproj
@@ -59,7 +59,14 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.AddIn, Version=1.8.0.0, Culture=neutral, processorArchitecture=x86">
